deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-core
spec:
  selector:
    app: backend-core
  ports:
    - name: https
      port: 443
      targetPort: 8443
    - name: grpc
      port: 50051
      targetPort: 50051
