deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-core-ingress
spec:
  tls:
    - hosts:
        - api.example.com
      secretName: tls-secret

  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-core
                port:
                  number: 443
